# realestate

./: README.md  notes.md  pyproject.toml
src/: Makefile
src/ai/: price_prediction.ipynb
src/apps/helper/: admin.py  apps.py  models.py  service.py
src/apps/helper/management/commands/: default_helper.py
src/apps/helper/migrations/: 0001_initial.py
src/apps/home/: admin.py  forms.py  models.py  service.py  tests.py  types.py  urls.py  views.py
src/apps/home/management/commands/: default_homes.py
src/apps/home/migrations/: 0001_initial.py  0002_alter_propertynearby_property.py  0003_alter_propertynearby_property.py
src/apps/users/: forms.py  models.py  urls.py  views.py
src/apps/users/migrations/: 0001_initial.py  0002_user_groups_user_user_permissions.py
src/core/: settings.py  softdelete.py  test_boto.py  urls.py  views.py
src/static/css/: style.css
src/static/js/: landing.js
src/templates/: base.html  base_auth.html  landing.html
src/templates/home/: create_property.html  delete_property.html  list_properties.html  property_detail.html
src/templates/users/: login.html  register.html
