[project]
name = "realestate"
version = "0.1.0"
description = "Realestate Project using Django/DRF"
authors = [
    {name = "Asilbek Yunusov"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django (>=6.0.5,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
package-mode = false

