[project]
name = "realestate"
version = "0.1.0"
description = "Realestate Project using Django/DRF"
authors = [
    {name = "Asilbek Yunusov"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django (>=6.0.5,<7.0.0)",
    "pillow (>=12.2.0,<13.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "black (>=26.3.1,<27.0.0)",
    "faker (>=40.15.0,<41.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
package-mode = false

